ParticleCounter: linear labelling implementation ready for testing